@@ -1,6 +1,9 @@
 v3.4.0-rc.4 (XXXX-XX-XX)
 ------------------------
 
+* Web UI now checks if server statistics are enabled before it sends its first
+  request to the statistics API
+
 * suppress warnings from statistics background threads such as 
   `WARNING caught exception during statistics processing: Expecting Object`
   during version upgrade
